--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,39 @@
-{
-    "name": "tuananh19961/laravel-form-bs4",
-    "type": "package",
-    "description": "Bootstrap 4 form builder for Laravel 5",
-    "keywords": [
-        "laravel",
-        "bootstrap",
-        "forms",
-        "php",
-        "form-builder",
-        "composer",
-        "package"
-    ],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "José Sousa",
-            "email": "sputinykster@gmail.com"
-        }
-    ],
-    "version": "3.0.4",
-    "minimum-stability": "dev",
-    "require": {},
-    "autoload": {
-        "psr-4": {
-            "Fserving\\Bootstrap4Forms\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Fserving\\Bootstrap4Forms\\Bootstrap4FormsServiceProvider"
-            ],
-            "aliases": {
-                "Form": "Fserving\\Bootstrap4Forms\\Bootstrap4FormsFacade"
-            }
-        }
-    }
+﻿{
+  "name": "tuananh19961/form-bs4-laravel",
+  "type": "package",
+  "description": "Bootstrap 4 form builder for Laravel 5",
+  "keywords": [
+      "laravel",
+      "bootstrap",
+      "forms",
+      "php",
+      "form-builder",
+      "composer",
+      "package"
+  ],
+  "license": "MIT",
+  "authors": [
+      {
+          "name": "José Sousa",
+          "email": "sputinykster@gmail.com"
+      }
+  ],
+  "version": "3.0.4",
+  "minimum-stability": "dev",
+  "require": {},
+  "autoload": {
+      "psr-4": {
+          "NetoJose\\Bootstrap4Forms\\": "src/"
+      }
+  },
+  "extra": {
+      "laravel": {
+          "providers": [
+              "NetoJose\\Bootstrap4Forms\\Bootstrap4FormsServiceProvider"
+          ],
+          "aliases": {
+              "Form": "NetoJose\\Bootstrap4Forms\\Bootstrap4FormsFacade"
+          }
+      }
+  }
 }
